[package]
name = "load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.0", features = ["runtime"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
futures = "0.3.30"